fix tile height on safari 14

--- a/src/components/Board/Tile.module.scss
+++ b/src/components/Board/Tile.module.scss
@@ -17,7 +17,7 @@
   top: 0;
   left: 0;
   width: var(--cellWidth);
-  aspect-ratio: 1/1;
+  height: var(--cellWidth);
   display: flex;
   justify-content: center;
   align-items: center;
